# cli-for-documents-summarization

./: ARCHITECTURE.md  README.md  pyproject.toml
doc-qa/: ARCHITECTURE.md  README.md  pyproject.toml
doc-qa/doc_qa/: __init__.py  cli.py  models.py  qa.py  retriever.py  store.py
pdf_summarizer/: __init__.py  chunker.py  cli.py  extractor.py  summarizer.py
